# distroless

./: BUILD  README.md  RELEASES.md  SECURITY.md  SUPPORT_POLICY.md  WORKSPACE  busybox_archives.bzl  checksums.bzl  debian_archives.bzl  debian_packages.yaml  debian_snapshots.yaml  debian_versions.bzl  knife
.github/ISSUE_TEMPLATE/: actionable-debian-cve.md
.github/workflows/: custom.yml  images.yaml  update-deb-package-snapshots.yml
base/: README.md  distro.bzl
cc/: README.md
debian_package_manager/: README.md  go.mod
debian_package_manager/cmd/generate/: generate.go
debian_package_manager/cmd/update/: update.go
debian_package_manager/internal/deb/: packageindex.go  snapshot.go
examples/cc/: Dockerfile
examples/go/: BUILD  Dockerfile
examples/java/: Dockerfile
examples/nodejs/: Dockerfile
examples/nodejs/node-express/: Dockerfile
examples/nonroot/: BUILD
examples/python3/: BUILD  Dockerfile
examples/python3-requirements/: Dockerfile
examples/rust/: BUILD  Dockerfile
java/: BUILD  README.md
nodejs/: README.md
private/: stamp.bash
private/pkg/test/oci_image/: BUILD.bazel
private/repos/deb/: deb.MODULE.bazel  trixie.yaml  trixie_java.yaml  trixie_python.yaml
private/util/: deb.bzl
python3/: BUILD  README.md
scripts/: update_node_archives.js
