"debian dependencies"

apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
apt.install(
    name = "trixie",
    lock = "//private/repos/deb:trixie.lock.json",
    manifest = "//private/repos/deb:trixie.yaml",
    package_template = "//private/repos/deb:package.BUILD.tmpl",
    resolve_transitive = False,
)
use_repo(apt, "trixie")

### VERSIONS HUB REPO ###
version = use_extension("//private/extensions:version.bzl", "version")
version.from_lock(
    lock = "//private/repos/deb:trixie.lock.json",
    repo_name = "trixie",
)
use_repo(version, "versions")
